--- a/Algoritims.Em.Grafos/nbproject/project.properties
+++ b/Algoritims.Em.Grafos/nbproject/project.properties
@@ -53,7 +53,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=algoritims.em.grafos.AlgoritimsEmGrafos
+main.class=algoritimo.em.grafos.AlgoritimoEmGrafos
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
