--- a/Algoritims.Em.Grafos/nbproject/private/private.properties
+++ b/Algoritims.Em.Grafos/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=/home/rafael/.netbeans/8.0.2/build.properties
+user.properties.file=/tmp/guest-ckADIV/.netbeans/7.2.1/build.properties
